<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" tools:ignore="MissingTranslation">集思谱</string>
    <string name="prompt_exit_app" tools:ignore="MissingTranslation">再按一次退出程序</string>
    <string name="et_login_input_nunbers_phone" tools:ignore="MissingTranslation">输入手机号</string>
    <string name="et_input_psw" tools:ignore="MissingTranslation">输入密码</string>
    <string name="bt_forget_psw" tools:ignore="MissingTranslation">密码</string>
    <string name="loginID" tools:ignore="MissingTranslation">注册新账号</string>
    <string name="back" tools:ignore="MissingTranslation">  返回</string>
    <string name="register" tools:ignore="MissingTranslation">登录</string>
    <string name="login" tools:ignore="MissingTranslation">手机号或邮箱注册</string>
    <string name="confirm" tools:ignore="MissingTranslation">确定</string>
    <string name="user_agreement" tools:ignore="MissingTranslation">用户协议</string>
    <string name="forget_password" tools:ignore="MissingTranslation">忘记密码?</string>
    <string name="enter_password" tools:ignore="MissingTranslation">输入密码</string>
    <string name="login_enter_password" tools:ignore="MissingTranslation">输入密码</string>
    <string name="login_second_password" tools:ignore="MissingTranslation">确认密码</string>
    <string name="enter_phone" tools:ignore="MissingTranslation">手机号码</string>
    <string name="enter_phone_email" tools:ignore="MissingTranslation">手机号码/邮箱</string>
    <string name="enter_nickname" tools:ignore="MissingTranslation">输入昵称</string>
    <string name="sex" tools:ignore="MissingTranslation">性别</string>
    <string name="area_major" tools:ignore="MissingTranslation">领域/专业</string>
    <string name="man" tools:ignore="MissingTranslation">男</string>
    <string name="gril" tools:ignore="MissingTranslation">女</string>
    <string name="get_verification_code" tools:ignore="MissingTranslation">获取验证码</string>
    <string name="enter_verification_code" tools:ignore="MissingTranslation">输入验证码</string>
    <string name="err" tools:ignore="MissingTranslation">服务器异常或网络异常</string>
    <string name="share_result" tools:ignore="MissingTranslation">"分享成功啦"</string>
    <string name="share_error" tools:ignore="MissingTranslation">"分享失败啦"</string>
    <string name="share_cancel" tools:ignore="MissingTranslation">"分享取消了"</string>
    <string name="please_log_in" tools:ignore="MissingTranslation">请登录</string>
    <string name="format_not_correct" tools:ignore="MissingTranslation">手机号码格式不正确</string>
    <string name="input_phone" tools:ignore="MissingTranslation">请输入手机号码</string>
    <string name="input_phone_email" tools:ignore="MissingTranslation">请输入手机号码/邮箱</string>
    <string name="phone_not_registered" tools:ignore="MissingTranslation">该手机号未注册</string>
    <string name="phone_existing" tools:ignore="MissingTranslation">该手机号已存在</string>
    <string name="comment" tools:ignore="MissingTranslation">评论  </string>
    <string name="cancel" tools:ignore="MissingTranslation">取消</string>
    <string name="credits" tools:ignore="MissingTranslation">积分</string>
    <string name="complete" tools:ignore="MissingTranslation">完成</string>
    <string name="nextAndFinish" tools:ignore="MissingTranslation">确定/下一页</string>
    <string name="not_found" tools:ignore="MissingTranslation">未找到结果</string>
    <string name="unbounded" tools:ignore="MissingTranslation">未绑定</string>
    <string name="verification_code_empty" tools:ignore="MissingTranslation">验证码不能为空</string>
    <string name="password_cannot_empty" tools:ignore="MissingTranslation">密码不能为空</string>
    <string name="name_cannot_empty" tools:ignore="MissingTranslation">姓名不能为空</string>
    <string name="passwords_match" tools:ignore="MissingTranslation">密码不一致</string>
    <string name="password_can_only" tools:ignore="MissingTranslation">密码不能少于6位,且只能包含数字字母下划线</string>
    <string name="change_password" tools:ignore="MissingTranslation">修改密码</string>
    <string name="select_type_feedback" tools:ignore="MissingTranslation">请选择反馈类型!</string>
    <string name="input_feedback_content" tools:ignore="MissingTranslation">请输入反馈内容!</string>
    <string name="account_cannot_empty" tools:ignore="MissingTranslation">账号不能为空</string>
    <string name="authorization_success" tools:ignore="MissingTranslation">授权成功</string>
    <string name="authorization_error" tools:ignore="MissingTranslation">授权出错</string>
    <string name="authorization_cancel" tools:ignore="MissingTranslation">授权取消</string>
    <string name="share" tools:ignore="MissingTranslation">分享</string>
    <string name="delete" tools:ignore="MissingTranslation">删除</string>
    <string name="phone_format_correct" tools:ignore="MissingTranslation">手机号码格式不正确</string>
    <string name="phone_been_binding" tools:ignore="MissingTranslation">该手机号已被绑定</string>
    <string name="enter_the_password" tools:ignore="MissingTranslation">输入密码不一致</string>
    <string name="enter_the_phone" tools:ignore="MissingTranslation">输入手机号码不一致</string>
    <string name="enter_the_phone_email" tools:ignore="MissingTranslation">输入手机号码/邮箱不一致</string>
    <string name="enter_password_consistent" tools:ignore="MissingTranslation">输入密码一致</string>
    <string name="newpassword_oldpassword_same" tools:ignore="MissingTranslation">新密码与旧密码相同</string>
    <string name="enter_correct_password" tools:ignore="MissingTranslation">请输入正确的密码</string>
    <string name="ensure_correct_password" tools:ignore="MissingTranslation">请保证密码输入一致</string>
    <string name="determine_cancellation" tools:ignore="MissingTranslation">确定注销?</string>
    <string name="no_login" tools:ignore="MissingTranslation">"需要登录才能执行此操作"</string>
    <string name="user_name" tools:ignore="MissingTranslation">用户名</string>
    <string name="sex_info" tools:ignore="MissingTranslation">性别</string>
    <string name="harmful_materials" tools:ignore="MissingTranslation">有害内容</string>
    <string name="pornographic" tools:ignore="MissingTranslation">淫秽色情</string>
    <string name="falsity_content" tools:ignore="MissingTranslation">虚假内容</string>
    <string name="information_disclosure" tools:ignore="MissingTranslation">信息泄露</string>
    <string name="spam" tools:ignore="MissingTranslation">垃圾广告</string>
    <string name="copyright_disputes" tools:ignore="MissingTranslation">版权纠纷</string>
    <string name="submit" tools:ignore="MissingTranslation">提交</string>
    <string name="setting" tools:ignore="MissingTranslation">设置</string>
    <string name="account_security" tools:ignore="MissingTranslation">账号与安全</string>
    <string name="system_setting" tools:ignore="MissingTranslation">系统设置</string>
    <string name="about_giiisp" tools:ignore="MissingTranslation">关于集思谱</string>
    <string name="giiisp" tools:ignore="MissingTranslation">集思谱</string>
    <string name="logout" tools:ignore="MissingTranslation">退出登录</string>
    <string name="binding_phone" tools:ignore="MissingTranslation">绑定手机</string>
    <string name="input_verification_code" tools:ignore="MissingTranslation">请输入4位数证码</string>
    <string name="correct_verification_code" tools:ignore="MissingTranslation">请输入正确的验证码</string>
    <string name="current_password" tools:ignore="MissingTranslation">当前密码:</string>
    <string name="show_password" tools:ignore="MissingTranslation">显示密码</string>
    <string name="confirm_password" tools:ignore="MissingTranslation">确认密码:</string>
    <string name="new_password" tools:ignore="MissingTranslation">输入新密码</string>
    <string name="new_pwd" tools:ignore="MissingTranslation">新密码　:</string>
    <string name="camera" tools:ignore="MissingTranslation">拍照</string>
    <string name="album" tools:ignore="MissingTranslation">图库</string>
    <string name="msg_title" tools:ignore="MissingTranslation">系统消息</string>
    <string name="cleancache" tools:ignore="MissingTranslation">清除缓存</string>
    <string name="company" tools:ignore="MissingTranslation">集思谱(北京)科技有限公司</string>
    <string name="feedback" tools:ignore="MissingTranslation">反馈</string>
    <string name="giiisp_copyright" tools:ignore="MissingTranslation">Copyright © 2017 GIIISP</string>
    <string name="name" tools:ignore="MissingTranslation">姓名</string>
    <string name="area_code" tools:ignore="MissingTranslation">+86</string>
    <string name="user_mechanism" tools:ignore="MissingTranslation">机构</string>
    <string name="user_position" tools:ignore="MissingTranslation">职称</string>
    <string name="user_department" tools:ignore="MissingTranslation">部门</string>
    <string name="user_jobtitle" tools:ignore="MissingTranslation">职务</string>
    <string name="user_resume" tools:ignore="MissingTranslation">履历</string>
    <string name="at_my" tools:ignore="MissingTranslation">\@我的</string>
    <string name="praise" tools:ignore="MissingTranslation">赞</string>
    <string name="problem" tools:ignore="MissingTranslation">问题</string>
    <string name="answer" tools:ignore="MissingTranslation">回答</string>
    <string name="friend_request" tools:ignore="MissingTranslation">好友请求</string>
    <string name="same_question" tools:ignore="MissingTranslation">同问</string>
    <string name="news" tools:ignore="MissingTranslation">消息</string>
    <string name="my_suggest" tools:ignore="MissingTranslation">我有建议</string>
    <string name="comment_failure" tools:ignore="MissingTranslation">问答发送失败</string>
    <string name="share_failure" tools:ignore="MissingTranslation">播放失败</string>
    <string name="crash" tools:ignore="MissingTranslation">产品闪退</string>
    <string name="contact" tools:ignore="MissingTranslation">联系方式:邮箱、QQ、手机号 (选填)</string>
    <string name="prompt" tools:ignore="MissingTranslation">请勿提交不良信息，否则将导致你的账号被封禁</string>
    <string name="phone_login" tools:ignore="MissingTranslation">手机登录</string>
    <string name="weixin_login" tools:ignore="MissingTranslation">微信登录</string>
    <string name="tourist" tools:ignore="MissingTranslation">游客进入</string>
    <string name="slogan" tools:ignore="MissingTranslation">是一种科研方式</string>
    <string name="retrieve_password" tools:ignore="MissingTranslation">找回密码</string>
    <string name="notification_settings" tools:ignore="MissingTranslation">通知设置</string>
    <string name="my_points" tools:ignore="MissingTranslation">我的积分</string>
    <string name="icon" tools:ignore="MissingTranslation">头像</string>
    <string name="image_watermarking" tools:ignore="MissingTranslation">图片水印</string>
    <string name="voice_selection" tools:ignore="MissingTranslation">语音选择</string>
    <string name="school" tools:ignore="MissingTranslation">学校</string>
    <string name="major" tools:ignore="MissingTranslation">专业</string>
    <string name="edubackground" tools:ignore="MissingTranslation">学历</string>
    <string name="degree" tools:ignore="MissingTranslation">学位</string>
    <string name="starttime" tools:ignore="MissingTranslation">开始时间</string>
    <string name="endtime" tools:ignore="MissingTranslation">结束时间</string>
    <string name="select_your_person" tools:ignore="MissingTranslation">请选择您的认证人</string>
    <string name="professional_identity" tools:ignore="MissingTranslation">选择以下一位认证人，请Ta证明您的职业身份</string>
    <string name="follow" tools:ignore="MissingTranslation">关注</string>
    <string name="summary" tools:ignore="MissingTranslation">综述</string>
    <string name="paper" tools:ignore="MissingTranslation">论文</string>
    <string name="download" tools:ignore="MissingTranslation">下载</string>
    <string name="unauthorized" tools:ignore="MissingTranslation">未认证</string>
    <string name="question_and_answer" tools:ignore="MissingTranslation">问答</string>
    <string name="play_the_history" tools:ignore="MissingTranslation">播放历史</string>
    <string name="contacts" tools:ignore="MissingTranslation">联系人</string>
    <string name="collection" tools:ignore="MissingTranslation">收藏</string>
    <string name="meeting" tools:ignore="MissingTranslation">会议</string>
    <string name="position_verified" tools:ignore="MissingTranslation">身份认证</string>
</resources>