<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_fragment_banner"/>

    <include
        layout="@layout/empty_view"
        android:visibility="gone"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@color/colorBackground"
                          android:orientation="vertical">

                <include layout="@layout/item_user_info_my"/>

                <TextView
                    android:id="@+id/tv_recording_authentication"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="7dp"
                    android:background="@mipmap/mine_rounded_rectangle"
                    android:drawableStart="@mipmap/mine_recording"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingEnd="70dp"
                    android:paddingStart="70dp"
                    android:text="@string/unauthorized"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_verified"
                    android:layout_width="270dp"
                    android:layout_height="41dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/item_blue_bg"
                    android:gravity="center"
                    android:text="@string/position_verified"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/img_summary"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/summary"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_paper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/img_paper"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/paper"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fl_mine_qa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/mine_qa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/question_and_answer"
                            android:textSize="18sp"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/fl_mine_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/mine_qa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/download"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fl_mine_subscribe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/mine_qa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/follow"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fl_mine_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/mine_qa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/play_the_history"
                            android:textSize="18sp"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_meeting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/mine_qa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/meeting"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/fl_mine_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/mine_qa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/news"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_collection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@mipmap/mine_qa"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/collection"
                            android:textSize="18sp"/>

                    </LinearLayout>


                </LinearLayout>

                <FrameLayout
                    android:id="@+id/fl_mine_contacts"
                    style="@style/mine_frame"
                    android:visibility="gone">

                    <TextView
                        style="@style/setting_item_configure"
                        android:drawableStart="@mipmap/mine_contacts"
                        android:text="@string/contacts"/>

                    <TextView
                        android:id="@+id/tv_mine_contacts"
                        style="@style/mine_text_colorsize"/>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/fl_mine_collection"
                    style="@style/mine_frame"
                    android:layout_marginTop="7dp"
                    android:visibility="gone">

                    <TextView
                        style="@style/setting_item_configure"
                        android:drawableStart="@mipmap/mine_collection"
                        android:text="@string/collection"/>

                    <TextView
                        android:id="@+id/tv_mine_collection"
                        style="@style/mine_text_colorsize"/>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/fl_mine_setting"
                    style="@style/mine_frame"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="7dp">

                    <TextView
                        style="@style/setting_item_configure"
                        android:drawableStart="@mipmap/mine_setting"
                        android:text="@string/setting"/>

                    <TextView
                        android:id="@+id/tv_mine_setting"
                        style="@style/mine_text_colorsize"/>
                </FrameLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>